@@ -1,9 +1,11 @@
 package com.example.coworkingprojectback.service.impl;
 import com.example.coworkingprojectback.DTO.In.CategoriaDTO;
 import com.example.coworkingprojectback.DTO.Out.CategoriaResponseDTO;
+import com.example.coworkingprojectback.DTO.Update.CategoriaRequestToUpdateDTO;
 import com.example.coworkingprojectback.entity.Categoria;
 import com.example.coworkingprojectback.repository.CategoriaRepository;
 import com.example.coworkingprojectback.service.ICategoriaService;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import java.util.List;
@@ -11,46 +13,61 @@ import java.util.stream.Collectors;
 
 @Service
 public class CategoriaService  implements ICategoriaService {
-    @Autowired
-    private CategoriaRepository categoriaRepository;
+
+    private final CategoriaRepository categoriaRepository;
+    private final ObjectMapper objectMapper;
+
+    public CategoriaService(CategoriaRepository categoriaRepository, ObjectMapper objectMapper) {
+        this.categoriaRepository = categoriaRepository;
+        this.objectMapper = objectMapper;
+    }
+
+    private final String NOT_FOUND_MESSAGE = "No se encontró la categoria solicitada";
+
 
     @Override
     public CategoriaResponseDTO createCategoria(CategoriaDTO categoriaDTO) {
-        Categoria categoria = new Categoria();
-        categoria.setNombre(categoriaDTO.getNombre());
-        categoria.setDescripcion(categoriaDTO.getDescripcion());
-        categoria = categoriaRepository.save(categoria);
-        return new CategoriaResponseDTO(categoria.getId(), categoria.getNombre(), categoria.getDescripcion());
+        Categoria categoria =mapToEntity(categoriaDTO);
+        categoriaRepository.save(categoria);
+        return mapToDTO(categoria);
+    }
+
+    private CategoriaResponseDTO mapToDTO(Categoria categoria) {
+        return objectMapper.convertValue(categoria, CategoriaResponseDTO.class);
+    }
+
+    private Categoria mapToEntity(CategoriaDTO categoriaDTO) {
+        return objectMapper.convertValue(categoriaDTO, Categoria.class);
     }
 
     @Override
-    public CategoriaResponseDTO getCategoriaById(Long id) {
+    public CategoriaResponseDTO getCategoriaById(Long id){
         Categoria categoria = categoriaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Categoria no encontrada"));
-        return new CategoriaResponseDTO(categoria.getId(), categoria.getNombre(), categoria.getDescripcion());
+               .orElseThrow(() -> new RuntimeException(NOT_FOUND_MESSAGE));
+         return mapToDTO(categoria);
     }
 
     @Override
     public List<CategoriaResponseDTO> getAllCategorias() {
         return categoriaRepository.findAll().stream()
-                .map(categoria -> new CategoriaResponseDTO(categoria.getId(), categoria.getNombre(), categoria.getDescripcion()))
-                .collect(Collectors.toList());
+               .map(this::mapToDTO)
+               .toList();
     }
 
     @Override
-    public CategoriaResponseDTO updateCategoria(Long id, CategoriaDTO categoriaDTO) {
-        Categoria categoria = categoriaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Categoria no encontrada"));
-        categoria.setNombre(categoriaDTO.getNombre());
-        categoria.setDescripcion(categoriaDTO.getDescripcion());
-        categoria = categoriaRepository.save(categoria);
-        return new CategoriaResponseDTO(categoria.getId(), categoria.getNombre(), categoria.getDescripcion());
+    public CategoriaResponseDTO updateCategoria(CategoriaRequestToUpdateDTO categoriaRequestToUpdateDTO) {
+        getCategoriaById(categoriaRequestToUpdateDTO.getId());
+        return mapToDTO(categoriaRepository.save(mapToEntity(categoriaRequestToUpdateDTO)));
+    }
+    public Categoria mapToEntity(CategoriaRequestToUpdateDTO categoriaRequestToUpdateDTO){
+        return objectMapper.convertValue(categoriaRequestToUpdateDTO, Categoria.class);
     }
 
     @Override
     public void deleteCategoria(Long id) {
         categoriaRepository.deleteById(id);
     }
+
 }
 
 
